<resources>
    <string name="app_name">Pokeme</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Signup</string>
    <string name="login_activity_name">Login</string>
    <string name="signup_activity_name">Signup</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="new_password_label">New Password</string>
    <string name="username_required_message">Username is Required</string>
    <string name="password_required_message">Password is Required</string>
    <string name="category_name_required_message">Category name is Required</string>
    <string name="note_name_required_message">Note Name is Required</string>
    <string name="note_content_required_message">Note Content is Required</string>
    <string name="loading">Loading...</string>
    <string name="username_used">Username already in use</string>
    <string name="login_invalid">Username or password invalid</string>
    <string name="create_new_category">Create New Category</string>
    <string name="create_new_note">Create New Note</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_add_note">Add Note</string>
    <string name="menu_add_category">Add Category</string>
    <string name="menu_logout">Logout</string>
    <string name="list_title">Notes &amp; Categories List</string>
    <string name="category_name">Category Name</string>
    <string name="tab_notes_name">Notes</string>
    <string name="tab_categories_name">Categories</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_message">Are you sure really want to delete it ?</string>
    <string name="category_delete_title">Category Delete</string>
    <string name="note_delete_title">Note Delete</string>
    <string name="note_name">Note Name</string>
    <string name="note_content">Note Content</string>
    <string name="note_create_btn">Create Note</string>
    <string name="category_select_prompt">Choose a Category</string>
    <string name="profile_update">Profile Update</string>
    <string name="profile_update_success">The profile has been updated.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
