<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_add_note"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_add_note" />
        <item
            android:id="@+id/nav_add_category"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_add_category" />
        <item
            android:id="@+id/nav_profile_update"
            android:icon="@drawable/dashboard"
            android:title="@string/profile_update" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/menu_logout" />
    </group>
</menu>