<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.pokeme.fragments.ProfileUpdateFragment">

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username_label"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_password_label"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnProfileUpdate"
        android:layout_width="212dp"
        android:layout_height="wrap_content"
        android:text="@string/profile_update"/>

</LinearLayout>
