<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false"
    android:scrollbars="vertical"
    tools:context="com.pokeme.SignupActivity"
    android:orientation="horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/signup_activity_name"
        app:titleTextColor="#fff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtSignupUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_label"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtSignupPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_label"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnSignup"
            android:layout_width="212dp"
            android:layout_height="wrap_content"
            android:onClick="onSubmit"
            android:text="@string/signup_btn"/>

    </LinearLayout>

</RelativeLayout>
