<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="false"
    android:scrollbars="vertical"
    tools:context="com.pokeme.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/txtLoginUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/username_label"
            android:inputType="textPersonName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/password_label"
            android:id="@+id/txtLoginPassword"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="212dp"
            android:onClick="onSubmit"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"></Button>

    </LinearLayout>

</ScrollView>
